改项目包名

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "com.mezzsy.myapplication"
+        applicationId "com.mezzsy.ndkdemos"
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
